--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 	   <div class="h_item h_logo"></div>
 	   <div class="h_item h_nav">
 	       <ul>
-	           <li class="h_n_item"><a href="#">个人</a></li>
+	           <li class="h_n_item on"><a href="#">个人</a></li>
 	           <li class="h_n_item"><a href="#">个人</a></li>
 	           <li class="h_n_item"><a href="#">个人</a></li>
 	       </ul>
 	   </div>
 	   <div class="h_item h_user"></div>
+	   <div class="clear:both;"></div>
 	</div>
 	<div class="content">
 		<div class="c_left">
@@ -33,7 +34,8 @@
 		    </ul>
 		</div>
 		<div class="c_right">
-		    content
+		    http://www.tita.com/<br/>
+		    www.teambition.com
 		</div>
 	</div>
 </body>
