--- a/project.html
+++ b/project.html
@@ -50,8 +50,8 @@
                </div>
             </div>
             <div class="div_list">
-                <div class="d_l_item">
-                    <div class="d_l_i_0">
+                 <div class="d_l_item">
+                    <div class="d_l_i_c d_l_i_500">
                         <div class="d_l_i_title">
                             <a href="#">安居客搜索服务</a>
                         </div>
@@ -60,9 +60,20 @@
                             <span>负责人：方怡 Faye</span>
                         </div>
                     </div>
+                    <div class="d_l_i_c  d_l_i_150">
+                        <div class="d_l_i_title">
+                            <span class="text_gray">当前阶段：</span>
+                            <span >新建</span>
+                        </div>
+                    </div>
+                    <div class="d_l_i_c ">
+                        <div class="d_l_i_title">
+                            <span >顺利</span>
+                        </div>
+                    </div>
                 </div>
                  <div class="d_l_item">
-                    <div class="d_l_i_0">
+                    <div class="d_l_i_c d_l_i_500">
                         <div class="d_l_i_title">
                             <a href="#">安居客搜索服务</a>
                         </div>
@@ -71,15 +82,37 @@
                             <span>负责人：方怡 Faye</span>
                         </div>
                     </div>
+                    <div class="d_l_i_c  d_l_i_150">
+                        <div class="d_l_i_title">
+                            <span class="text_gray">当前阶段：</span>
+                            <span >新建</span>
+                        </div>
+                    </div>
+                    <div class="d_l_i_c ">
+                        <div class="d_l_i_title">
+                            <span >顺利</span>
+                        </div>
+                    </div>
                 </div>
                  <div class="d_l_item">
-                    <div class="d_l_i_0">
+                    <div class="d_l_i_c d_l_i_500">
                         <div class="d_l_i_title">
                             <a href="#">安居客搜索服务</a>
                         </div>
                         <div class="d_l_i_info">
                             <span>开发商事业部 - 平台模式发展</span>
                             <span>负责人：方怡 Faye</span>
+                        </div>
+                    </div>
+                    <div class="d_l_i_c  d_l_i_150">
+                        <div class="d_l_i_title">
+                            <span class="text_gray">当前阶段</span>
+                            <span >新建</span>
+                        </div>
+                    </div>
+                    <div class="d_l_i_c ">
+                        <div class="d_l_i_title">
+                            <span >顺利</span>
                         </div>
                     </div>
                 </div>
